# marshrutka

./: .gitignore  .~lock.list.csv#  Cargo.toml  Map.html  README.md  build.rs  index.html  list.csv  marshrutka-3d008e52ed2b4959.js  marshrutka-8c257a54df7835ab.js  marshrutka-cb4a42cf14464cfd.js  marshrutka.js  marshrutka_bg.wasm
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
locales/: marshrutka.yml
src/: app.rs  binary_heap.rs  cell.rs  consts.rs  cost.rs  deep_link.rs  emoji.rs  fonts.rs  grid.rs  homeland.rs  index.rs  lib.rs  main.rs  pathfinder.rs  skill.rs  translation.rs
