[package]
name = "marshrutka"
version = "0.1.0"
authors = ["Marat Bukharov <marat.buharov@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "**/*.rs", "assets/*", "images/*", "locales/*", "index.html", "Trunk.toml", "Cargo.toml"]
rust-version = "1.85.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
anyhow = "1"
arrayvec = "0.7"
compare = "0.1"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "x11", # To support Linux (and CI)
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["http"] }
enum-map = "2.7"
log = "0.4"
num = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
resvg = { version = "0.45", default-features = false }
rust-i18n = "3"
simplecss = "0.2"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
time = { version = "0.3", features = ["parsing", "serde", "formatting", "macros"] }
tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
tl = "0.7"

# We need serde for app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 3 # fast binary and wasm
lto = true
strip = "symbols"
panic = "abort"
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
